# internet-safety

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml
app/: __init__.py  models.py  routes.py
app/static/css/: styles.css
app/templates/: base.html  index.html  komen.html  navbar.html  p1.html  p2.html  p3.html  p4.html
migrations/versions/: 9774996781ed_initial_migration.py
